sw chapter updated
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@4924 4525493e-7705-40b1-a816-d608a930855b

--- a/2010/thesis/references.bib
+++ b/2010/thesis/references.bib
@@ -8,6 +8,15 @@
 		journal=""
 }
 
+@Techreport{avati05,
+	author			= "Avati, V. and Oesterberg, K.",
+	institution		= "TOTEM",
+	title			= "Optical function parametrization for beta*=1540 m optics",
+	type			= "TOTEM-NOTE"
+	number			= "2005-001"
+	year			= "2005"
+}
+
 @Article{totem-blois06,
 		author="TOTEM",
 		title="TOTEM physics",
@@ -72,6 +81,14 @@
       title        = "The VFAT Production Test Platform for the TOTEM Experiment",
       year         = "2008",
 	  url		   = "http://cdsweb.cern.ch/record/1159891/files/p544.pdf"
+}
+
+@Article{hubert-si,
+	collaboration = "TOTEM",
+	author = "Niewiadomski, H."
+	title = "Reconstruction Performance of Silicon Detectors with Reduced Edge
+				Insensitive Volume Manufactured in CTS and 3D-Planar Technologies",
+	journal = "to be published"
 }
 
 
@@ -1098,3 +1115,4 @@
 	title = "Linear Algebra in ROOT",
 	url = "ftp://root.cern.ch/root/doc/14LinearAlgebra.pdf"
 }
+
