--- a/2010/thesis/totem.tex
+++ b/2010/thesis/totem.tex
@@ -21,6 +21,8 @@ HOW (detectors): This challenging program brings special requirements for the de
 
 \section[ttm det]{Detector apparatus}
 
+\fig[12cm]{fig/external/totem_detectors.png}{totem detectors}{TOTEM detectors}
+
 \> brief description of T1 and T2 with a few pictures
 \>> reference to more detailed information: \bref{totem04,totem08,totem10}
 
@@ -29,6 +31,23 @@ HOW (detectors): This challenging program brings special requirements for the de
 \>> break down with pictures, few info about the sensors, define hybrid
 \>> introduce (with pictures BPMs, BLMs, LVDTs)
 \>> define the standard naming: \bref{totem-rp-naming}
+
+%\fig[15cm]{fig/external/RP_stations_original.pdf}{s}{[7cm]RP stations}
+
+\bmfig
+\fig[,5cm]{fig/external/rp_station.jpg}{s}{[7cm]RP station}
+\fig[,5cm]{fig/external/rp_unit.jpg}{s}{[7cm]RP stations}
+\emfig
+
+\bmfig
+\fig[,5cm]{fig/external/rp_pot.jpg}{rp pot}{[7cm]A Roman Pot}
+\fig[,5cm]{fig/external/rp_package.jpg}{rp package}{[7cm]Detector package}
+\emfig
+
+\bmfig
+\fig[,5cm]{fig/external/rp_hybrid.jpg}{rp hybrid}{[7cm]A hybrid with a silicon detector and four VFAT chips.}
+\fig[,5cm]{fig/external/rp_blm_bpm.jpg}{rp sensor}{[7cm]A detail of a silicon sensor.}
+\emfig
 
 \tab[\strut\quad#\quad\hfil&\quad#\quad\hfil&\quad#\quad\hfil\cr]{rp naming schemes}{The RP naming scheme.}{\ln
 arm		& 45 (=left), 56 (=right)		\cr
@@ -65,22 +84,6 @@ In 56, top pots, V sensors shifted in x by +0.514mm, U sensors by -0.514mm.
 \> RP approach -- typical $10\si$, define beam sigma!
 
 
-\iffalse
-\bmfig
-\fig[8cm]{fig/external/RP_stations_original.pdf}{s}{[7cm]RP stations}
-\fig[6cm]{fig/external/rp_unit.jpg}{rp unit}{[7cm]RP unit}
-\emfig
-
-\bmfig
-\fig[6cm]{fig/external/rp.jpg}{rp rp}{[7cm]A Roman Pot}
-\fig[6cm]{fig/external/rp_package.jpg}{rp package}{[7cm]Detector package}
-\emfig
-
-\bmfig
-\fig[6cm]{fig/external/hybrid2.jpg}{rp hybrid}{[7cm]A hybrid with a silicon detector and four VFAT chips.}
-\fig[6cm]{fig/external/silicon_explained.png}{rp sensor}{[7cm]A detail of a silicon sensor.}
-\emfig
-\fi
 
 \section[rp measurement]{Proton Measurement with Roman Pot detectors}
 
