sw chapter (almost) finished
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@4928 4525493e-7705-40b1-a816-d608a930855b

--- a/2010/thesis/references.bib
+++ b/2010/thesis/references.bib
@@ -1076,12 +1076,12 @@
 }
 
 @Article{bracco10,
-      author       = "Bracco, C and Assmann, R and Redaelli, S and Rossi, A and
-                      Wollmann, D",
-      title        = "Collimators and Beam Cleaning: First Results and Future
-                      Plans. oai:cds.cern.ch:1307577",
+      author       = "Bracco, C., Assmann, R., Redaelli, S., Rossi, A. and
+                      Wollmann, D.",
+      title        = "Collimators and Beam Cleaning: First Results and Future Plans.",
 	  publisher		= "Proccedings from the LHC beam commissioning workshop, Evian 2010"
       year         = "2010",
+	  url			= "https://espace.cern.ch/acc-tec-sector/Evian/Papers/4_02_CB.pdf"
 }
 
 
