--- a/2010/thesis/introduction.tex
+++ b/2010/thesis/introduction.tex
@@ -18,3 +18,5 @@ dot product			& $\vec v\cdot \vec w$	& middle dot\cr
 matrix				& $\mat M$				& slanted\cr\ln
 software parameter  & \pmt{parameter}		& typewriter\cr\ln
 }}}
+
+\> standar abbreviations Eq., Tb., Fg. (+Fgs, ...), Sc. + Ch.
