--- a/2010/thesis/totem.tex
+++ b/2010/thesis/totem.tex
@@ -26,6 +26,17 @@ HOW (detectors): This challenging program brings special requirements for the de
 \> brief description of T1 and T2 with a few pictures
 \>> reference to more detailed information: \bref{totem04,totem08,totem10}
 
+\bmfig
+\fig[,5cm]{fig/external/t1_quarter.jpg}{t1 quarter}{[7cm]T1 quarter}
+\fig[,5cm]{fig/external/t1_installed.jpg}{t1 installed}{[7cm]T1 installation}
+\emfig
+
+\bmfig
+\fig[,5cm]{fig/external/t2_quarter.jpg}{t2 quarter}{[7cm]T2 quarter}
+\fig[,5cm]{fig/external/t2_installed.jpg}{t2 installed}{[7cm]T2 installation}
+\emfig
+
+
 \> describe the RP system
 \>> motivation: very small angles -- need move close to the beam and detectors far from the IP
 \>> break down with pictures, few info about the sensors, define hybrid
@@ -35,8 +46,8 @@ HOW (detectors): This challenging program brings special requirements for the de
 %\fig[15cm]{fig/external/RP_stations_original.pdf}{s}{[7cm]RP stations}
 
 \bmfig
-\fig[,5cm]{fig/external/rp_station.jpg}{s}{[7cm]RP station}
-\fig[,5cm]{fig/external/rp_unit.jpg}{s}{[7cm]RP stations}
+\fig[,5cm]{fig/external/rp_station.jpg}{rp station}{[7cm]RP station}
+\fig[,5cm]{fig/external/rp_unit.jpg}{rp unit}{[7cm]RP unit}
 \emfig
 
 \bmfig
@@ -46,7 +57,7 @@ HOW (detectors): This challenging program brings special requirements for the de
 
 \bmfig
 \fig[,5cm]{fig/external/rp_hybrid.jpg}{rp hybrid}{[7cm]A hybrid with a silicon detector and four VFAT chips.}
-\fig[,5cm]{fig/external/rp_blm_bpm.jpg}{rp sensor}{[7cm]A detail of a silicon sensor.}
+\fig[,5cm]{fig/external/rp_blm_bpm.jpg}{rp sensor}{[7cm]BPM and BLM at a RP station.}
 \emfig
 
 \tab[\strut\quad#\quad\hfil&\quad#\quad\hfil&\quad#\quad\hfil\cr]{rp naming schemes}{The RP naming scheme.}{\ln
@@ -80,6 +91,8 @@ In 56, top pots, V sensors shifted in x by +0.514mm, U sensors by -0.514mm.
 
 \> define u, v (the system rotating with sensor) and U, V (45 deg. rotation of about s of the xys system), strips along u, read-out direction is v
 \TODO{make sure this is used everywhere}
+
+\fig[12cm]{fig/pdf/ttm_station_3d.pdf}{ttm station 3d}{[7cm]}
 
 \> RP approach -- typical $10\si$, define beam sigma!
 
